--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p>
       This site presents my capstone project and professional growth as a Computer Science major at SNHU.
       It includes my professional self-assessment, enhanced artifacts, and project narratives that demonstrate
-      my skills in software engineering, algorithms, databases, and security.
+      my skills in collaborative environments, communications, computing solutions, computing practices, and security.
     </p>
 
     <!-- Navigation -->
@@ -67,8 +67,7 @@
         Read my self-assessment directly below, or use the links to view or download the original DOCX.
       </p>
       <div class="links-row">
-        <a href="Professional Self-Assessment.docx">Download Self-Assessment (DOCX)</a>
-        <a href="https://github.com/abhir4123/SNHU-CS-499/blob/main/Professional%20Self-Assessment.docx" target="_blank" rel="noopener">View in GitHub Repository</a>
+        <a href="https://github.com/abhir4123/SNHU-CS-499/blob/main/Professional%20Self-Assessment.docx" target="_blank" rel="noopener">View Professional Self-Assessment in GitHub Repository</a>
       </div>
       <br />
 
@@ -78,7 +77,8 @@
           Read the full Professional Self-Assessment
         </summary>
         <div class="sa-body">
-          <!-- (your self-assessment paragraphs stay here unchanged) -->
+          <p>Completing my coursework in the Computer Science program and developing my ePortfolio has allowed me to showcase my technical strengths while preparing for real-world work. In collaborative environments, I worked on group assignments like the Scrum Team Roleplay in CS-250 Software Development Lifecycle, which helped me develop teamwork and project management skills by using GitHub for version control and practicing how to integrate code across a team. Communicating with stakeholders was emphasized in CS-255 System Analysis and Design, where I built the ability to gather requirements, weigh tradeoffs, and present technical designs in clear language that non-technical audiences could understand. I strengthened my foundation in data structures and algorithms through MAT-243 Applied Statistics for STEM and CS-330 Computer Graphics and Visualization, where I learned how to analyze large data sets efficiently with Python’s statistical methods and applied low-level structures like vertex arrays and transformation matrices in C++ with OpenGL to optimize 3D rendering. In software engineering and database courses like CS-465 Full Stack Development I and DAD-220 Intro to Structural Database Environments, I built skills in designing and deploying scalable full-stack systems by working with the MEAN stack, REST APIs, authentication, and relational schemas, gaining confidence in bridging frontend, backend, and database layers. Security was another recurring theme, as in CYB-200 Cybersecurity Foundation and CS-305 Software Security, I developed the ability to apply principles like the CIA triad, access control, and threat modeling to secure applications through validation, safe error handling, and risk management. I was able to apply all of these skills in my capstone ePortfolio enhancements, where I combined database integration, secure API design, algorithmic decision-making, stakeholder-focused documentation, and collaborative workflows into a single, cohesive project. Altogether, these experiences not only demonstrate my readiness to enter the computer science profession and bring me a step closer to my professional goal of being a Full-Stack Software Engineer, but also reflect the well-rounded foundation I have built across software engineering, data, security, and communication.</p>
+          <p>The artifacts in my ePortfolio demonstrate how my skills fit together across the full project lifecycle, beginning with the AppointmentService system I created in CS-320 Software Testing, Automation, and Quality Assurance, and enhanced across multiple categories to highlight different dimensions of growth. In category one, Software Design and Engineering, I transformed a small in-memory backend into a structured full-stack application with a Spring Boot REST API and a React frontend, showing my ability to design modular and scalable software. In Category Two, Algorithms and Data Structures, I introduced a TreeMap alongside the existing HashMap structure to optimize retrieval efficiency and deterministic ordering, while also adding CSV and JSON export functionality to the frontend, which showcased both my understanding of data structures and my ability to extend them into user-facing features that support collaboration. In Category Three, Databases, I integrated MongoDB for persistent storage, added JWT-based authentication, and refined repository queries for chronological and range-based access, demonstrating my ability to deliver secure, production-ready applications with real-world persistence. Together, these enhancements form a cohesive progression from basic service design to advanced full-stack engineering, highlighting not only my technical strengths but also my capacity to refine and expand a project over time. This portfolio introduces the artifacts that follow as a comprehensive representation of my abilities in software engineering, data, algorithms, and security.</p>
         </div>
       </details>
     </section>
@@ -94,7 +94,7 @@
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to show the embedded YouTube video
+          Watch Code Review video
         </summary>
         <div class="sa-body">
           <div class="video-wrap">
@@ -110,7 +110,7 @@
       </details>
 
       <p style="margin-top:12px">
-        Prefer a new tab? <a href="https://youtu.be/zHCyWbz1W30" target="_blank" rel="noopener">Watch on YouTube</a>
+        Prefer a new tab? <a href="https://youtu.be/zHCyWbz1W30" target="_blank" rel="noopener">Watch Code Review on YouTube</a>
       </p>
     </section>
 
@@ -130,7 +130,7 @@
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to view original source files
+          View original source files
         </summary>
         <div class="sa-body">
           <h4>Appointment.java</h4>
@@ -190,7 +190,7 @@ public class AppointmentService {
       </details>
     </section>
 
-    <!-- Section 4: Enhanced Artifact - Software Design & Engineering -->
+    <!-- Section 4: Enhanced Artifact - Software Design and Engineering -->
     <section id="artifact-sde" class="card">
       <h2>💻 Enhanced Artifact: Software Design and Engineering</h2>
       <p>
@@ -199,14 +199,14 @@ public class AppointmentService {
       </p>
       <p>
         <a href="https://github.com/abhir4123/SNHU-CS-499/tree/main/Enhancement%20One%20-%20Software%20Design%20and%20Engineering" target="_blank" rel="noopener">
-          View the Software Design & Engineering enhancement on GitHub
+          View Software Design and Engineering Enhancement in GitHub Repository
         </a>
       </p>
 
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to view a frontend screenshot
+          View application frontend screenshot
         </summary>
         <div class="sa-body">
           <img
@@ -219,7 +219,7 @@ public class AppointmentService {
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to read the full narrative
+          Read the full narrative for this enhanced artifact
         </summary>
         <div class="sa-body">
           <p>The artifact I chose for this enhancement is the AppointmentService component from my CS-320 Software Testing and Quality Assurance course project. The original version was a Java-based backend service, created in early 2025 that handled basic CRUD operations for appointment records using in-memory storage. It also included JUnit tests but had no user interface and no structure for scaling into a larger application. I originally created it to practice object-oriented programming and test-driven development.</p>
@@ -228,14 +228,14 @@ public class AppointmentService {
           <p>The enhancement process required rethinking the application’s architecture and building connections between a backend service and a modern frontend framework. I learned how to set up RESTful communication, handle CORS configurations, and use both server-side and client-side validation to improve user experience. One of the biggest challenges was keeping the frontend and backend separate but fully in sync. I had to troubleshoot issues with request formats, JSON serialization, and displaying meaningful error messages to users. Through this process, I gained a deeper understanding of full-stack workflows, REST API design, and how to improve usability through better error handling and form validation. Overall, this enhancement transformed a small backend service into a complete web application and strengthened my ability to design and deliver software that meets real-world standards.</p>
           <p>
             <a href="https://github.com/abhir4123/SNHU-CS-499/blob/main/Narratives/Software%20Design%20and%20Engineering%20Artifact%20Narrative.docx" target="_blank" rel="noopener">
-              Download narrative (DOCX)
+              View Narrative in GitHub Repository
             </a>
           </p>
         </div>
       </details>
     </section>
 
-    <!-- Section 5: Enhanced Artifact - Algorithms & Data Structure -->
+    <!-- Section 5: Enhanced Artifact - Algorithms and Data Structure -->
     <section id="artifact-ads" class="card">
       <h2>🧠 Enhanced Artifact: Algorithms and Data Structure</h2>
       <p>
@@ -246,19 +246,19 @@ public class AppointmentService {
       </p>
       <p>
         <a href="https://github.com/abhir4123/SNHU-CS-499/tree/main/Enhancement%20Two%20-%20Algorithms%20and%20Data%20Structure" target="_blank" rel="noopener">
-          View the Algorithms & Data Structure enhancement on GitHub
+          View Algorithms and Data Structure Enhancement in GitHub Repository
         </a>
       </p>
 
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to view a frontend screenshot
+          View application frontend screenshot
         </summary>
         <div class="sa-body">
           <img
-            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Two%20-%20Algorithms%20and%20Data%20Structure/Enhanced%20Artifact/AppointmentApp/application_frontend_screenshot.png_?raw=true"
-            alt="Frontend Screenshot - Algorithms & Data Structure"
+            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Two%20-%20Algorithms%20and%20Data%20Structure/Enhanced%20Artifact/AppointmentApp/application_frontend_screenshot.png?raw=true"
+            alt="Frontend Screenshot - ADS"
             class="screenshot" />
         </div>
       </details>
@@ -266,7 +266,7 @@ public class AppointmentService {
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to read the full narrative
+          Read the full narrative for this enhanced artifact
         </summary>
         <div class="sa-body">
           <p>The artifact I chose for this enhancement is the AppointmentService component from my CS-320 Software Testing and Quality Assurance course project. The original version was a Java-based backend service that handled basic CRUD operations for appointment records using in-memory storage. This artifact was first created in early 2025, and for this enhancement, I focused on improving its data handling efficiency and retrieval accuracy by redesigning its algorithms and data structures. Since I am using the same artifact to enhance for all three of the project categories, the enhancements made for this milestone partially build on the enhancements made in the last milestone.</p>
@@ -275,14 +275,14 @@ public class AppointmentService {
           <p>This enhancement reinforced the importance of selecting the right data structures to improve both the functionality and performance of a system. Keeping the hash map and tree map synchronized required careful attention to update and delete logic to ensure data consistency. Implementing deterministic ordering for upcoming and previous appointment queries improved both the usability of the API and the predictability of results for the frontend. The addition of export functionality encouraged me to think about how the service could support collaboration beyond the UI, making the data more accessible for different audiences. Improving validation, error messages, and documentation also strengthened my ability to communicate technical behavior clearly, which is a critical skill for working on software projects that will be maintained or extended by others.</p>
           <p>
             <a href="https://github.com/abhir4123/SNHU-CS-499/blob/main/Narratives/Algorithms%20and%20Data%20Structures%20Artifact%20Narrative.docx" target="_blank" rel="noopener">
-              Download narrative (DOCX)
+              View Narrative in GitHub Repository
             </a>
           </p>
         </div>
       </details>
     </section>
 
-    <!-- NEW Section 6: Enhanced Artifact - Databases -->
+    <!-- Section 6: Enhanced Artifact - Databases -->
     <section id="artifact-db" class="card">
       <h2>🗄️ Enhanced Artifact: Databases</h2>
       <p>
@@ -292,19 +292,37 @@ public class AppointmentService {
       </p>
       <p>
         <a href="https://github.com/abhir4123/SNHU-CS-499/tree/main/Enhancement%20Three%20-%20Databases" target="_blank" rel="noopener">
-          View the Databases enhancement on GitHub
+          View Databases Enhancement in GitHub Repository
         </a>
       </p>
 
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to view a frontend screenshot
+          View application frontend screenshots
         </summary>
         <div class="sa-body">
           <img
             src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_frontend_screenshot.png?raw=true"
-            alt="Frontend Screenshot - Databases Enhancement"
+            alt="Frontend Screenshot - D1"
+            class="screenshot" />
+        </div>
+        <div class="sa-body">
+          <img
+            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_frontend_register_page_screenshot.png?raw=true"
+            alt="Frontend Screenshot - D2"
+            class="screenshot" />
+        </div>
+        <div class="sa-body">
+          <img
+            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_frontend_login_page_screenshot.png?raw=true"
+            alt="Frontend Screenshot - D3"
+            class="screenshot" />
+        </div>
+        <div class="sa-body">
+          <img
+            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_frontend_logged_in_screenshot.png?raw=true"
+            alt="Frontend Screenshot - D4"
             class="screenshot" />
         </div>
       </details>
@@ -312,7 +330,7 @@ public class AppointmentService {
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to view a backend API screenshot
+          View application backend API screenshot (partial page)
         </summary>
         <div class="sa-body">
           <img
@@ -325,7 +343,7 @@ public class AppointmentService {
       <details>
         <summary>
           <span class="chev">▶</span>
-          Toggle to read the full narrative
+          Read the full narrative for this enhanced artifact
         </summary>
         <div class="sa-body">
           <p>The artifact I selected for this enhancement is the AppointmentService component from my CS-320 Software Testing and Quality Assurance course project. The original version was developed in early 2025 and functioned as a backend service to manage appointments using in-memory storage. While it provided basic CRUD operations, the design cleared all data whenever the program restarted, which made it impractical for real-world use cases. For this milestone, I enhanced the artifact by integrating it with MongoDB for persistent data storage, replacing temporary in-memory storage with a robust, production-ready database solution. Since I am using the same artifact to enhance for all three of the project categories, the enhancements made for this milestone partially build on the enhancements made in the last milestone.</p>
@@ -334,7 +352,7 @@ public class AppointmentService {
           <p>The process of enhancing this artifact reinforced the importance of persistence and security in full-stack development. I learned how to design MongoDB schemas and indexes that align with the application’s most common access patterns and how to integrate them with Spring Boot using repository methods. One challenge I encountered was ensuring validation consistency across client and server, particularly when handling date ranges and duplicate keys. Another challenge was translating database errors into user-friendly error messages so that the frontend could surface clear feedback. These obstacles taught me to think critically about both the developer experience and the end-user experience. Overall, this enhancement strengthened my ability to design secure, persistent, and maintainable backend systems that integrate seamlessly with a modern frontend.</p>
           <p>
             <a href="https://github.com/abhir4123/SNHU-CS-499/blob/main/Narratives/Databases%20Artifact%20Narrative.docx" target="_blank" rel="noopener">
-              Download narrative (DOCX)
+              View Narrative in GitHub Repository
             </a>
           </p>
         </div>
