--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@ public class AppointmentService {
       </p>
       <p>
         <a href="https://github.com/abhir4123/SNHU-CS-499/tree/main/Enhancement%20One%20-%20Software%20Design%20and%20Engineering" target="_blank" rel="noopener">
-          View Software Design and Engineering Enhancement in GitHub Repository
+          View Software Design & Engineering Enhancement in GitHub Repository
         </a>
       </p>
 
       <details>
         <summary>
           <span class="chev">▶</span>
-          View application frontend screenshot
+          View application frontend page screenshot
         </summary>
         <div class="sa-body">
           <img
@@ -246,14 +246,14 @@ public class AppointmentService {
       </p>
       <p>
         <a href="https://github.com/abhir4123/SNHU-CS-499/tree/main/Enhancement%20Two%20-%20Algorithms%20and%20Data%20Structure" target="_blank" rel="noopener">
-          View Algorithms and Data Structure Enhancement in GitHub Repository
+          View Algorithms & Data Structure Enhancement in GitHub Repository
         </a>
       </p>
 
       <details>
         <summary>
           <span class="chev">▶</span>
-          View application frontend screenshot
+          View application frontend page screenshot
         </summary>
         <div class="sa-body">
           <img
@@ -299,7 +299,7 @@ public class AppointmentService {
       <details>
         <summary>
           <span class="chev">▶</span>
-          View application frontend screenshots
+          View application frontend page screenshots
         </summary>
         <div class="sa-body">
           <img
