--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Abhilash Krishna Raj's CS-499 ePortfolio</title>
+    <title>Abhi Krishna Raj's CS-499 ePortfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       :root{
