--- a/index.html
+++ b/index.html
@@ -330,12 +330,24 @@ public class AppointmentService {
       <details>
         <summary>
           <span class="chev">▶</span>
-          View application backend API screenshot (partial page)
+          View application backend API Landing Page screenshots (whole page top-to-bottom)
         </summary>
         <div class="sa-body">
           <img
-            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_backend_screenshot.png?raw=true"
-            alt="Backend API Screenshot (localhost:8080) - Databases Enhancement"
+            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_backend_screenshot_1.png?raw=true"
+            alt="Backend API Screenshot 1"
+            class="screenshot" />
+        </div>
+        <div class="sa-body">
+          <img
+            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_backend_screenshot_2.png?raw=true"
+            alt="Backend API Screenshot 2"
+            class="screenshot" />
+        </div>
+         <div class="sa-body">
+          <img
+            src="https://github.com/abhir4123/SNHU-CS-499/blob/main/Enhancement%20Three%20-%20Databases/Enhanced%20Artifact/AppointmentApp/application_backend_screenshot_3.png?raw=true"
+            alt="Backend API Screenshot 3"
             class="screenshot" />
         </div>
       </details>
